# msca

./: CITATION.cff  Cargo.toml  README.md  rustfmt.toml  todo.md
.claude/: CLAUDE.md
clem-core/: Cargo.toml
clem-core/src/: accumulate.rs  dataset.rs  dictionary.rs  error.rs  io.rs  lib.rs  manifest.rs  query.rs  read.rs  schema.rs  segment.rs
clem-core/src/query/: mod.rs
clem-derive/: Cargo.toml
clem-derive/src/: data.rs  lib.rs  read.rs
doc/: derive.md  file-header.md  manifest.md  on-disk-format.md  query-filters.md  query-joins.md  read-cycle.md  simd-alignment.md  write-cycle.md
docs/: dictionary.md  file-header.md  manifest.md  read-cycle.md  write-cycle.md
msca-core/: Cargo.toml
msca-core/src/: accumulate.rs  binary.rs  dataset.rs  error.rs  io.rs  lib.rs  manifest.rs  read.rs  schema.rs  segment.rs
msca-core/src/query/: mod.rs
msca-derive/: Cargo.toml
msca-derive/src/: data.rs  lib.rs  read.rs
src/: accumulate.rs  dataset.rs  error.rs  io.rs  lib.rs  manifest.rs  schema.rs  segment.rs
tests/: integration.rs
