[package]
name = "clem"
version = "0.1.0"
edition = "2024"
description = "A high-throughput storage engine for multidimensional analytical data, written in Rust."
license = "BSD-3-Clause"
authors = ["Amelia Fraser-Dale"]
repository = "https://github.com/MillieFD/clem"

# See a full list of keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[cargo.clippy]
missing_const_for_fn = "deny"
unwrap_used = "deny"

# See a full list of keys and their definitions at https://rust-lang.github.io/rust-clippy/stable/index.html

[dependencies]
smol = "2.0"
memmap2 = "0.9"
bitvec = "1.0"

[dependencies.minicbor]
version = "2.2"
features = ["derive", "std"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.log]
version = "0.4"
optional = true

[dependencies.toml]
version = "1.1"
optional = true

[features]
default = []
metadata = ["dep:toml"]
log = ["dep:log"]