[package]
name = "clem"
version = "0.1.0"
edition = "2024"
description = "A high-throughput storage engine for multidimensional analytical data, written in Rust."
license = "BSD-3-Clause"
authors = ["Amelia Fraser-Dale"]
repository = "https://github.com/MillieFD/clem"

# See a full list of keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
missing_const_for_fn = "deny"
unwrap_used = "deny"

# See a full list of keys and their definitions at https://rust-lang.github.io/rust-clippy/stable/index.html

[workspace]
members = ["clem-core", "clem-derive"]

[dependencies.clem-derive]
path = "clem-derive"

[dependencies.clem-core]
path = "clem-core"

[dev-dependencies]
smol = "2.0"

[features]
default = []
dictionary = ["clem-core/dictionary"]
index = ["clem-core/index"]
log = ["clem-core/log"] # TODO Implement logging.
metadata = ["clem-core/metadata"]
serde = ["clem-core/serde"]
