[package]
name = "msca"
version = "0.1.0"
edition = "2024"
description = "A high-throughput storage engine for multidimensional analytical data, written in Rust."
license = "BSD-3-Clause"
authors = ["Amelia Fraser-Dale"]
repository = "https://github.com/MillieFD/msca"

# See a full list of keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
missing_const_for_fn = "deny"
unwrap_used = "deny"

# See a full list of keys and their definitions at https://rust-lang.github.io/rust-clippy/stable/index.html

[workspace]
members = ["msca-core", "msca-derive"]

[dependencies.msca-derive]
path = "msca-derive"
optional = true

[dependencies.msca-core]
path = "msca-core"

[dev-dependencies]
smol = "2.0"

[features]
default = ["derive"]
derive = ["dep:msca-derive"]
log = ["msca-core/log"] # TODO Implement logging.
metadata = ["msca-core/metadata"]
serde = ["msca-core/serde"]
