[package]
name = "clem-core"
version = "0.1.0"
edition = "2024"
description = "A high-throughput storage engine for multidimensional analytical data, written in Rust."
license = "BSD-3-Clause"
authors = ["Amelia Fraser-Dale"]
repository = "https://github.com/MillieFD/clem"

# See a full list of keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
missing_const_for_fn = "deny"
unwrap_used = "deny"

# See a full list of keys and their definitions at https://rust-lang.github.io/rust-clippy/stable/index.html

[dependencies]
smol = "2.0"
memmap2 = "0.9"
bitvec = "1.0"
static_assertions = "1.1"

[dependencies.minicbor]
version = "2.2"
features = ["derive", "std"]

[dependencies.xxhash-rust]
version = "0.8"
features = ["xxh3"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.log]
version = "0.4"
optional = true

[dependencies.toml] # TODO Allow any format for metadata. Remove TOML dependency.
version = "1.1"
optional = true

[features]
default = []
dictionary = []
index = ["dictionary"]
log = ["dep:log"] # TODO Implement logging.
metadata = ["dep:toml"] # TODO Remove TOML dependency
serde = ["dep:serde"]
