[package]
name = "msca-derive"
version = "0.1.0"
edition = "2024"
description = "Derive macros for the MSCA storage engine."
license = "BSD-3-Clause"
authors = ["Amelia Fraser-Dale"]
repository = "https://github.com/MillieFD/msca"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
